--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ li {
 .skills {
   background-color: orange;
   margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .projects {
@@ -83,7 +85,11 @@ li {
 footer {
   background-color: black;
   color: white;
+  height: 100px;
   text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
   padding: 10px;
   margin-top: 20px;
 }
